FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui REQUIRED)

set(QT_USE_QTUITOOLS TRUE)

INCLUDE(${QT_USE_FILE})

QT4_ADD_RESOURCES(ISIS_GLANCE_QT4_RESOURCE_FILES ${RESOURCE_FILES})

qt4_wrap_cpp(ISIS_GLANCE_QT4_MOC_FILES ${ISIS_GLANCE_QT4_MOC_HPP} OPTIONS -DBOOST_TT_HAS_OPERATOR_HPP_INCLUDED)
# QT4_WRAP_UI(vast_UIS_H ${UI_FILES})
